[package]
name = "sandwich-detector"
version = "0.1.0"
edition = "2021"
description = "Code to detect potential sandwich attacks on Solana"
license = "MIT"
authors = ["0xIchigo <0xIchigo@protonmail.com>"]
readme = "README.md"

[dependencies]
dotenv = "0.15.0"
helius = "0.2.3"
tokio = { version = "1.42.0", features = ["full"] }
