[package]
name = "sandwich-detector"
version = "0.1.0"
edition = "2021"
description = "Code to detect potential sandwich attacks on Solana"
license = "MIT"
authors = ["0xIchigo <0xIchigo@protonmail.com>"]
readme = "README.md"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.39"
dotenv = "0.15.0"
helius = "0.2.3"
hex = "0.4.3"
lazy_static = "1.5.0"
serde = "1.0.216"
serde_json = "1.0.133"
solana-client = "2.1.5"
solana-sdk = "2.1.5"
solana-transaction-status = "2.1.5"
spl-token = "7.0.0"
tokio = { version = "1.42.0", features = ["full"] }
